# tutorials

.github/: copilot-instructions.md
.github/skills/video-ideas/: SKILL.md
jwt-fastapi/: README.md  jwt-fastapi-2.py  jwt-fastapi.py  main.py  pyproject.toml
jwt-fastapi/app/: app.py
jwt-fastapi/app/config/: environment.py
jwt-fastapi/app/models/: __init__.py
jwt-fastapi/app/routes/: auth_route.py
jwt-fastapi/app/security/: __init__.py  security.py
jwt-fastapi/app/services/: __init__.py  auth_service.py
postgres-fastapi/: .env.example  Dockerfile  README.md  docker-compose.yaml  postgres-fastapi.py  pyproject.toml
postgres-fastapi/app/: app.py
postgres-fastapi/app/config/: environment.py
postgres-fastapi/app/database/: __init__.py  database.py
postgres-fastapi/app/models/: __init__.py  note_model.py
postgres-fastapi/app/routes/: __init__.py  note_route.py
postgres-fastapi/app/services/: __init__.py  note_service.py
